releases/v1.0/README.md
# PavlokSuperChat 利用ガイド

バージョン1.0 / Windows 10・11 64-bit
変更内容は「更新履歴.md」を参照してください。

## 何をするアプリ？

YouTubeライブ配信のSuper Chatを検出し、指定金額と一致したときに
Pavlokへ電気刺激（Zap）の送信を指示するアプリです。
金額を最大4グループに分け、それぞれの強さを設定できます。
起動すると設定画面が開き、画面から監視を開始・停止できます。
対象は日本円のSuper Chatだけです。通常チャットやSuper Stickerは対象外です。

## 必要なファイル

動作に必要なのはPavlokSuperChat.exeだけです。Pythonも外部の初期設定ファイルも不要です。
README.mdは説明書として添付していますが、起動に必須ではありません。
初期設定はEXEに同梱されています。APIキー・トークンは利用者が画面で入力します。

## 設定はどこに保存される？

初回起動時に、EXE内の初期設定を次の場所へ自動作成します。

```text
%LOCALAPPDATA%\PavlokSuperChat\config.ini
```

通常は C:\Users\ユーザー名\AppData\Local\PavlokSuperChat\config.ini です。
エクスプローラーのアドレス欄に %LOCALAPPDATA%\PavlokSuperChat と入力すると開けます。
画面にも保存先を表示します。「設定を保存」と「監視開始」はこのファイルへ保存します。
2回目以降は保存済み設定を読み込み、EXEを更新しても上書きしません。
EXEと同じフォルダにconfig.iniがあっても、新しいEXEでは読み込みません。
Windowsユーザーごとに設定が分かれます。

今回の初期設定は配布用config.iniの値を引き継いでいます。
4グループ有効、出力は固定20、実送信ONです。初回確認時は画面で実送信をOFFにしてください。
APIキー・トークンは未設定のため、入力するまで監視を開始できません。

## 旧版の設定を引き継ぐ場合

まず新しいEXEを一度起動して閉じます。すべての監視を停止した状態で、
以前のconfig.iniを上記の保存先へコピーして置き換え、EXEを起動し直してください。
既存の保存先の設定を残したい場合は、置き換える前に別の場所へコピーしてください。
自動で旧ファイルを取り込むことはありません。画面から設定し直す方法でも構いません。

別途、YouTube Data API v3のAPIキーとPavlok初期トークンを用意してください。
実送信には使用できる状態のPavlokが必要です。
監視対象はライブチャットが有効な、配信中のYouTube動画です。

## 画面から設定・開始・停止する（通常の使い方）

1. PavlokSuperChat.exeを起動します。
2. APIキー、Pavlok初期トークン、金額グループ、待ち時間を画面で設定します。
   認証情報は伏せ字で表示されます。使わないグループのチェックを外してください。
   出力方法は「固定」「ランダム」から選びます。設定ファイルではfixed/randomとして保存します。
   EXEの通常起動ではコマンド画面を表示しません。
3. 最初は「実機へZapを送信」のチェックを外しておきます（DRY-RUN）。
4. 「配信URL / 動画ID」を入力して「監視開始」を押します。
   入力を検証し、config.iniへ保存してから接続します。画面下にログが表示されます。
5. 「監視停止」を押すと、監視と未送信の予約を終了・破棄します。
   すでに送信したZapは取り消せません。再開しても破棄した予約は戻りません。
6. 停止完了後、設定を変更したり、再び「監視開始」を押したりできます。
   監視中は設定の編集・保存と二重起動はできません。
   再開時の最初の履歴は「起動時の履歴を無視」の設定に従って処理します。

「設定を保存」は保存だけ行います。APIキー未設定でもDRY-RUN設定は保存できます。
ウィンドウを閉じる場合も、監視を停止して未送信予約を破棄します。
配信URLは設定ファイルに保存しません。

## config.iniを直接編集する場合

1. 画面に表示された保存先のconfig.iniをメモ帳で開きます。
   「;」で始まる行は説明です。「=」の右側だけ変更してください。
   [YouTube]などの見出しから次の見出しまでが、その設定の範囲です。
2. [YouTube]のapi_keyへAPIキーを貼り付けます。
   [Pavlok]のinitial_tokenへPavlok初期トークンを貼り付けます。
   初期トークンはBearer付きでも無しでも構いません。
3. 最初は[Pavlok]のenabled=falseにします。
   実機へは送らず、検出・予約・待機・出力をログで確認できます。
4. [SuperChat1]～[SuperChat4]の金額と出力を設定します（下記参照）。
5. 保存し、PavlokSuperChat.exeをダブルクリックします。
   画面の「配信URL / 動画ID」へ配信URLを貼り付け、「監視開始」を押します。
   例: https://www.youtube.com/watch?v=XXXXXXXXXXX
       https://www.youtube.com/live/XXXXXXXXXXX
   動画IDだけでも入力できます。
6. [STREAM] 監視開始と表示されたら監視中です。
   対象スパチャで[MATCH]、[QUEUE]、[DRY-RUN]が出ることを確認します。
7. 実送信する場合は監視停止後、「実機へZapを送信」にチェックを入れ、再度開始します。
   外部のメモ帳でconfig.iniを変更した場合は、画面を閉じて起動し直してください。

従来のコンソールだけで使う場合:

```text
PavlokSuperChat.exe --console
```

ソースから使う場合:

```text
.venv\Scripts\python.exe pavlok_superchat.py
.venv\Scripts\python.exe pavlok_superchat.py --console
```

ソース実行時だけは、従来どおりプロジェクト直下のconfig.iniを使用します。

## 金額グループの設定例

200円と500円のスパチャで、毎回20の出力を送る例です。

```text
[SuperChat1]
enabled=true
amounts=200,500
output_mode=fixed
fixed_output=20
random_min=20
random_max=40
```

enabled:      trueならこのグループを使う、falseなら使わない。
amounts:      対象の整数円。複数指定は半角カンマで区切ります。
output_mode:  fixed（固定）またはrandom（ランダム）。
fixed_output: fixedで使う強さ（1～100）。
random_min:   randomで使う強さの下限（1～100）。
random_max:   randomで使う強さの上限（下限以上、100以下）。

上の例でoutput_mode=randomに変えると、送信直前に20～40の整数を選びます。
20と40も含まれます。fixed_outputは送信には使いません。
random_minとrandom_maxが同じ値なら、randomでも毎回その値になります。
有効グループでは、使用していないモードの値も正しい範囲にしてください。
グループ1～4はすべて同じ機能で、どれでもfixed・randomを選べます。
番号で強さや実行の優先順位が決まることはありません。

amounts=200,500は「200円と500円だけ」です。「200円以上」ではありません。
201円や800円は対象外です。円記号や桁区切りは付けないでください。
1000円は1000と書きます。1,000と書くと1と0という別々の金額になります。
有効な別グループに同じ金額を書くと、起動時エラーになります。

## グループ3・4を使わない場合

[SuperChat3]と[SuperChat4]のenabledを、それぞれfalseにします。
既存の金額・出力の行はそのまま残して構いません。無効な間は無視します。
見出しは削除しないでください。最低1グループは有効にしてください。
4つともfalseだと起動時エラーです。
再度trueにするときは、残してある金額と出力を確認してください。

## 2種類のenabledの違い

[Pavlok]のenabledは、アプリ全体が実機へ送信するかのスイッチです。
[SuperChat1]などのenabledは、その金額グループを使うかのスイッチです。

```text
Pavlok=false、グループ=true → 検出・予約するが、実機へは送らない。
Pavlok=true、グループ=true  → 検出・予約し、待ち時間後に実機へ送る。
グループ=false             → このグループでは発火しない。
```

## 待ち時間と予約の順番

[Pavlok]の設定は全グループ共通です。

```text
delay_seconds=5      検出・予約から最低5秒経過してから送信可能。
cooldown_seconds=10  前回の送信試行から次の試行まで最低10秒あける。
```

いずれも0ならその待ち時間はありません。0以上の有限の数値を指定します。
対象スパチャは到着順に1本の予約キューへ入り、同じ順番で処理されます。
クールダウン中の予約も消えません。予約が多いとdelayより長く待ちます。
金額やグループ番号による割り込みはありません。

## 起動時の履歴・終了

[System]のignore_initial_history=trueを推奨します。
起動時に取得した最初の履歴は既読扱いにしてZap判定をしません。
falseでは起動前のスパチャも判定される場合があります。
画面の「監視停止」またはウィンドウを閉じると監視を終了します。
コンソール版はCtrl+Cで終了します。配信終了時も監視を終了します。
未処理予約は保存せず破棄し、次回起動時へ引き継ぎません。

## ログの読み方・通信失敗時

```text
[SUPERCHAT] スパチャ検出
[MATCH]     日本円・対象金額に一致
[QUEUE]     送信予約を追加
[COOLDOWN]  前回の試行からの待機中
[GROUP]     その予約の出力グループ
[OUTPUT]    選んだ強さ
[DRY-RUN]   実機へ送信せず処理
[PAVLOK] OK APIが送信要求を成功として返した（例: HTTP 200）
```

通信失敗・タイムアウトでも同じZapは自動再送しません。
実際には届いている可能性があり、二重送信を避けるためです。
401/403ではトークンだけ更新し、次の予約から使います。失敗Zapは再送しません。

## うまく動かない場合

- 設定は画面に表示された保存先を確認してください。EXE横のconfig.iniは読み込みません。
- APIキー・トークンが空欄や設定例の文字のままでないか確認してください。
- 配信中か、ライブチャットが有効か、URLが正しいか確認してください。
- グループがenabled=trueか、金額が完全一致か確認してください。
- Super Stickerや日本円以外は対象外です。
- [DRY-RUN]なら[Pavlok]のenabled=falseです。
- 出力は1～100、ランダム下限は上限以下にしてください。
- 設定変更後は保存してアプリを再起動してください。

## 旧形式の設定について

[SuperChat1]～[SuperChat4]が一つもない場合だけ、従来の
[SuperChat] amountsと[Pavlok]の共通出力設定を使います。
4グループ方式では旧対象金額・旧共通出力を読み込みも検証もしません。
新しい設定例には、重複を避けるため旧設定を記載していません。
旧形式から移す場合は4つのグループを揃えてください。
EXEは初回のみ同梱設定からファイルを作成します。その後は画面で保存・開始したときに更新します。

## 認証情報の取り扱い

config.iniにはAPIキーとトークンが平文で入ります。
他人へ渡したり、SNS・GitHub・配信画面へ公開しないでください。
出力は装着者と確認した範囲で設定してください。
